# xmpp_space_control

./: CMakeLists.txt  spacecontrolclient.cpp  spacecontrolclient.h
i3c_cli/: CMakeLists.txt  finalizingcommandmethod.cpp  finalizingcommandmethod.h  i3cresponsemethod.cpp  i3cresponsemethod.h  main.cpp  spacecontrol.config.example
i3c_client/: CMakeLists.txt  REAME.commands.txt  i2cendpoint.cpp  i2cendpoint.h  i2cendpoint_dummy.cpp  i2cendpoint_wiringpi.cpp  i2chandler.cpp  i2chandler.h  i2cmethods.cpp  i2cmethods.h  i3cmethods.cpp  i3cmethods.h  main.cpp
i3c_client/resource/etc/default/: i3cclient
i3c_client/resource/etc/init.d/: i3cclient
space_control/: .gitignore  CMakeLists.txt  README.protocol.txt  accessfilter.cpp  accessfilter.h  configuredclientfactory.cpp  configuredclientfactory.h  daemon.cpp  daemon.h  main.cpp  methodhandler.cpp  methodhandler.h  spacecommand.cpp  spacecommand.h  spacecontrol.config.example  spacecontrolclient.cpp  spacecontrolclient.h  util.cpp  util.h
